Add and test AngularJs

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Test Route</title>
+    <title>Bill Tracker</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>    
 </head>
-<body>
-    <h1>Testing 1 2 3</h1>
+<body ng-app="billTrackerApp">
+    <h1>Bill Tracker</h1>
+        <div ng-controller="MainCtlr">
+            <a href="" ng-click="logTest()">Test Log</a>
+        </div>
+    <script src="scripts/app.js"></script>
 </body>
 </html>
