--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,22 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bill Tracker</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body ng-app="billTrackerApp">
-    <h1>Bill Tracker</h1>
-        <div ng-controller="MainCtlr">
-            
-            <label class="bill">{{bill.name}}</label>
-            <input ng-model="bill.name" class="bill" type="text"/>
+    <div class="page-header">
+        <h1>Bill Tracker</h1>
+    </div>
+    <div class="container">
+        <div class="row" ng-controller="MainCtlr">
+            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                <h3>Bill</h3>
+                <label class="bill">{{bill.name}}</label>
+                <input ng-model="bill.name" class="bill" type="text"/>
+            </div>
 
-            <label class="amount">{{bill.amount}}</label>
-            <input ng-model="bill.amount" class="amount" type="text"/>
-            <div>
+            <div class="col-xs-6 col-sm-4 col-md-6 col-lg-7">
+                <h3>Amount</h3>
+                <label class="amount">{{bill.amount}}</label>
+                <input ng-model="bill.amount" class="amount" type="text"/>
+            </div>
+            <div class="actions">
                 <a href="">Add</a>                    
                 <a href="">Edit</a>
                 <a href="" ng-click="logTest()">Test Log</a>
             </div>
         </div>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>            
     <script src="scripts/app.js"></script>
 </body>
