--- a/src/public/index.html
+++ b/src/public/index.html
@@ -14,21 +14,29 @@
         <h1>Bill Tracker</h1>
     </div>
     <div class="container">
-        <div class="row" ng-controller="MainCtlr">
-            <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
-                <h3>Bill</h3>
-                <label class="bill">{{bill.name}}</label>
-                <input ng-model="bill.name" class="bill" type="text"/>
+            <div class="headers row">
+                    <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                        <h3>Bill</h3>
+                    </div>
+        
+                    <div class="col-xs-6 col-sm-4 col-md-6 col-lg-7">
+                        <h3>Amount</h3>
+                    </div>
+                </div>
+        
+        <div ng-controller="MainCtlr" class="interaction row">
+            <div class="billInput col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                <label ng-hide="editing" class="bill">{{bill.name}}</label>
+                <input ng-show="editing" ng-model="bill.name" class="bill" type="text"/>
             </div>
 
-            <div class="col-xs-6 col-sm-4 col-md-6 col-lg-7">
-                <h3>Amount</h3>
-                <label class="amount">{{bill.amount}}</label>
-                <input ng-model="bill.amount" class="amount" type="text"/>
+            <div class="amountInput col-xs-6 col-sm-4 col-md-6 col-lg-7">
+                <label ng-hide="editing" class="amount">{{bill.amount}}</label>
+                <input ng-show="editing" ng-model="bill.amount" class="amount" type="text"/>
             </div>
             <div class="actions">
                 <a href="">Add</a>                    
-                <a href="">Edit</a>
+                <a href="" ng-click="editing = !editing">Edit</a>
                 <a href="" ng-click="logTest()">Test Log</a>
             </div>
         </div>
