--- a/src/public/index.html
+++ b/src/public/index.html
@@ -15,17 +15,17 @@
     </div>
     <div ng-controller="MainCtlr" class="container">
         <div class="headers row">
-                <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3">
-                    <h3>Bill</h3>
-                </div>
-    
-                <div class="col-xs-4 col-sm-4 col-md-3 col-lg-3">
-                    <h3>Amount</h3>
-                </div>
-                <div class="col-xs-5 col-sm-4 col-md-3 col-lg-3">
-                    <h3>Due Date</h3>
-                </div>
+            <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3">
+                <h3>Bill</h3>
             </div>
+
+            <div class="col-xs-4 col-sm-4 col-md-3 col-lg-3">
+                <h3>Amount</h3>
+            </div>
+            <div class="col-xs-5 col-sm-4 col-md-3 col-lg-3">
+                <h3>Due Date</h3>
+            </div>
+        </div>
         
         <div ng-repeat="bill in bills" class="interaction row" ng-class="{ 'payed': bill.payed }">
             <div class="billInput col-xs-4 col-sm-4 col-md-3 col-lg-3">
@@ -43,10 +43,9 @@
             <div class="actions">                    
                 <a href="" ng-click="editing = !editing">Edit</a>
                 <a href="" ng-click="bill.payed = !bill.payed" ng-class="{ 'payed': bill.payed }">Pay</a>
-                <a href="">Delete</a>
+                <a href="" ng-click="helloConsole()">Delete</a>
             </div>
         </div>
-        {{bills}}
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>            
     <script src="scripts/app.js"></script>
