Add add functionality

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -14,6 +14,9 @@
         <h1>Bill Tracker</h1>
     </div>
     <div ng-controller="MainCtlr" class="container">
+        <div ng-click="addNewBill()" class="new-bill">
+            <a href="">+ Add a New Bill</a>
+        </div>
         <div class="headers row">
             <div class="col-xs-3 col-sm-4 col-md-3 col-lg-3">
                 <h3>Bill</h3>
