--- a/src/public/index.html
+++ b/src/public/index.html
@@ -51,6 +51,8 @@
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>            
-    <script src="scripts/app.js"></script>
+    <script src="scripts/app.js" type="text/javascript"></script>
+    <script src="scripts/controllers/main.js" type="text/javascript"></script>
+    <script src="scripts/services/data.js" type="text/javascript"></script>    
 </body>
 </html>
