--- a/src/public/index.html
+++ b/src/public/index.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         
-        <div ng-repeat="bill in bills" class="interaction row" ng-class="{ 'payed': bill.payed }">
+        <div ng-repeat="bill in bills | orderBy : 'payed'" ng-init="bill.payed = false"  class="interaction row" ng-class="{ 'payed': bill.payed }">
             <div class="billInput col-xs-4 col-sm-4 col-md-3 col-lg-3">
                 <label ng-hide="editing" class="bill">{{bill.name}}</label>
                 <input ng-show="editing" ng-model="bill.name" ng-blur="stopEditing()" class="bill" type="text"/>
