--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,8 @@
         <h1>Bill Tracker</h1>
     </div>
     <bills></bills>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>            
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.min.js"></script>            -->
     <script src="scripts/app.js" type="text/javascript"></script>
     <script src="scripts/controllers/main.js" type="text/javascript"></script>
     <script src="scripts/services/data.js" type="text/javascript"></script>
