--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,17 @@
 <body ng-app="billTrackerApp">
     <div class="page-header">
         <h1>Bill Tracker</h1>
-    </div>
+    </div>    
     <bills></bills>
+    <!-- Temporary button -->
+    <div class="all-width">
+            <a href="" ng-click="getRegister()" class="center btn btn-primary">Test Log In</a>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.min.js"></script>            -->
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.min.js"></script>        -->
     <script src="scripts/app.js" type="text/javascript"></script>
     <script src="scripts/controllers/main.js" type="text/javascript"></script>
     <script src="scripts/services/data.js" type="text/javascript"></script>
-    <script src="scripts/directives/bills.js" type="text/javascript"></script>    
+    <script src="scripts/directives/bills.js" type="text/javascript"></script>
 </body>
 </html>
