--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body ng-app="billTrackerApp">
+    <nav class="navbar"><div ng-include src="'templates/navbar.html'"></nav>
     <div class="page-header">
         <h1>Bill Tracker</h1>
     </div>    
     <bills></bills>
-    <!-- Temporary button -->
-    <div class="all-width">
-            <a href="" ng-click="getRegister()" class="center btn btn-primary">Test Log In</a>
-    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.min.js"></script>        -->
     <script src="scripts/app.js" type="text/javascript"></script>
