--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body ng-app="billTrackerApp">
+<div ng-controller="MainCtlr">
     <nav class="navbar"><div ng-include src="'templates/navbar.html'"></nav>
     <div class="page-header">
         <h1>Bill Tracker</h1>
     </div>
-    <bills></bills>
+    <div>
+        <!-- <bills ng-if="currentUser"></bills> -->
+        <!-- <bills></bills> -->
+        <!-- <div ng-if="!currentUser" ng-include src="'templates/login.html'"></div>         -->
+        <div ng-include src="'templates/login.html'"></div>
+    </div>
+    {{user}}
+    {{bills}}
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.min.js"></script>        -->
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-route.js"></script>        -->
     <script src="scripts/app.js" type="text/javascript"></script>
     <script src="scripts/controllers/main.js" type="text/javascript"></script>
     <script src="scripts/services/data.js" type="text/javascript"></script>
     <script src="scripts/directives/bills.js" type="text/javascript"></script>
+</div>
 </body>
 </html>
