Abandon register and sign in for now

--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,8 @@
         <h1>Bill Tracker</h1>
     </div>
     <div>
-        <!-- <bills ng-if="currentUser"></bills> -->
-        <!-- <bills></bills> -->
-        <!-- <div ng-if="!currentUser" ng-include src="'templates/login.html'"></div>         -->
-        <div ng-include src="'templates/login.html'"></div>
+        <bills></bills>
     </div>
-    {{user}}
     {{bills}}
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-route.js"></script>        -->
