--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bill Tracker</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-route.js"></script>        -->
+    <script src="scripts/app.js" type="text/javascript"></script>
+    <script src="scripts/controllers/main.js" type="text/javascript"></script>    
+    <script src="scripts/services/data.js" type="text/javascript"></script>
+    <script src="scripts/directives/bills.js" type="text/javascript"></script>
+    <script src="scripts/angular-datepicker.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/angular-datepicker.css" type="text/css" />
     <link rel="stylesheet" href="styles/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -19,12 +27,7 @@
         <bills></bills>
     </div>
     {{bills}}
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-route.js"></script>        -->
-    <script src="scripts/app.js" type="text/javascript"></script>
-    <script src="scripts/controllers/main.js" type="text/javascript"></script>
-    <script src="scripts/services/data.js" type="text/javascript"></script>
-    <script src="scripts/directives/bills.js" type="text/javascript"></script>
+
 </div>
 </body>
 </html>
