--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bill Tracker</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-route.js"></script>        -->
     <script src="scripts/app.js" type="text/javascript"></script>
     <script src="scripts/controllers/main.js" type="text/javascript"></script>    
     <script src="scripts/services/data.js" type="text/javascript"></script>
@@ -22,21 +21,11 @@
 
     <nav class="navbar"><div ng-include src="'templates/navbar.html'"></nav>
     <div class="page-header">
-        <h1 id="month"></h1>
+        <h1 id="month"></h1><button class="btn btn-default prev-btn" ng-click="previousMonth()" href="#"><p class="prev">previous</p></button><button class="btn btn-default next-btn" ng-click="nextMonth()" href="#"><p class="next">next</p></button>
     </div>
     <div>   
         <bills></bills>
     </div>
-    {{bills}}
 </div>
-<script>
-    let today = new Date();
-    const month = ["January", "February", "March", "April", "May", "June",
-        "July", "August", "September", "October", "November", "December"][today.getMonth()];
-    let dateStr = month + ' ' + today.getFullYear();
-
-    document.getElementById("month").innerHTML = dateStr;
-
-</script>
 </body>
 </html>
